# qadra

./: .clang-format  .gitignore  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CMakePresets.json  Canvas.cpp  Canvas.hpp  CanvasFontCatalog.cpp  CanvasFontCatalog.hpp  Command.hpp  CommandDockWidget.cpp  CommandDockWidget.hpp  CommandManager.cpp  CommandManager.hpp  DebugTextOverlay.cpp  DebugTextOverlay.hpp  GridPass.cpp  GridPass.hpp  InlineTextEditPresenter.cpp  InlineTextEditPresenter.hpp  InlineTextEditSessionController.cpp  InlineTextEditSessionController.hpp  InlineTextInputController.cpp  InlineTextInputController.hpp  Program.cpp  Program.hpp  README.md  Shader.cpp  Shader.hpp  TextCreateCommand.cpp  TextCreateCommand.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp  main.cpp  qadra.rc
cad/: CMakeLists.txt  Document.cpp  Document.hpp  DocumentChange.hpp  EntitySnapshot.cpp  EntitySnapshot.hpp
cad/history/: DocumentEditor.cpp  DocumentEditor.hpp
cmake/: CopyOcctRuntimeDeps.cmake
command/: CMakeLists.txt  Context.hpp  HistoryEntry.hpp  Manager.cpp  Manager.hpp  Output.hpp  PointerEvent.hpp  Preview.hpp  Registry.cpp  Registry.hpp  SessionCommand.hpp  View.hpp
command/arc/: Command.cpp  Command.hpp  State.hpp
command/circle/: Command.cpp  Command.hpp  State.hpp
command/ellipse/: Command.cpp  Command.hpp  State.hpp
command/line/: Command.cpp  Command.hpp  State.hpp
command/point/: Expression.hpp  Parser.cpp  Parser.hpp  Resolver.cpp  Resolver.hpp
command/polyline/: Command.cpp  Command.hpp  State.hpp
command/text/: Command.cpp  Command.hpp  State.hpp
core/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Document.cpp  Document.hpp  Font.cpp  Font.hpp  FontEngine.cpp  FontEngine.hpp  GlyphAtlas.cpp  GlyphAtlas.hpp  GlyphData.hpp  Grid.cpp  Grid.hpp  Handle.cpp  Handle.hpp  InlineTextEditLayout.cpp  InlineTextEditLayout.hpp  LineRenderer.cpp  LineRenderer.hpp  OrientedBoxRenderer.cpp  OrientedBoxRenderer.hpp  ShapedGlyph.hpp  TextEntity.cpp  TextEntity.hpp  TextLayout.cpp  TextLayout.hpp  TextRenderer.cpp  TextRenderer.hpp  TextShaper.cpp  TextShaper.hpp
entity/: Arc.cpp  Arc.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Ellipse.cpp  Ellipse.hpp  Entity.cpp  Entity.hpp  EntityType.hpp  LWPolyline.cpp  LWPolyline.hpp  Line.cpp  Line.hpp  Text.cpp  Text.hpp
gl/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Program.cpp  Shader.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexLayout.hpp
kernel/: ArcBuilder.hpp  CMakeLists.txt  CircleBuilder.hpp  EllipseBuilder.hpp
kernel/occt/: ArcBuilder.cpp  CircleBuilder.cpp  EllipseBuilder.cpp
math/: Arc.cpp  Arc.hpp  BoxAABB.cpp  BoxAABB.hpp  BoxOBB.cpp  BoxOBB.hpp  Bulge.cpp  Bulge.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Ellipse.cpp  Ellipse.hpp  Grid.cpp  Grid.hpp
render/: ArcInstanceBuilder.cpp  ArcInstanceBuilder.hpp  ArcPass.cpp  ArcPass.hpp  CMakeLists.txt  CircleInstanceBuilder.cpp  CircleInstanceBuilder.hpp  EllipseInstanceBuilder.cpp  EllipseInstanceBuilder.hpp  EllipsePass.cpp  EllipsePass.hpp  GeometryCache.cpp  GeometryCache.hpp  GridPass.cpp  GridPass.hpp  LWPolylineGeometryBuilder.cpp  LWPolylineGeometryBuilder.hpp  LinePass.cpp  LinePass.hpp  ManagedBuffer.hpp  PreviewRenderer.cpp  PreviewRenderer.hpp  RenderPass.cpp  RenderPass.hpp  RenderScene.cpp  RenderScene.hpp  Renderer.cpp  Renderer.hpp  SlotAllocator.hpp  TextPass.cpp  TextPass.hpp  VertexBatch.hpp  VisibleDrawList.cpp  VisibleDrawList.hpp
shaders/: arc.fragment.glsl  arc.vertex.glsl  ellipse.fragment.glsl  ellipse.vertex.glsl  grid.fragment.glsl  grid.vertex.glsl  line.fragment.glsl  line.vertex.glsl  oriented-box.fragment.glsl  oriented-box.vertex.glsl  text.fragment.glsl  text.vertex.glsl  vertex.glsl
spatial/: CMakeLists.txt  SpatialIndex.cpp  SpatialIndex.hpp
tool/: CMakeLists.txt  CommandResult.hpp  LineTool.cpp  LineTool.hpp  Tool.hpp  ToolCommand.hpp  ToolContext.hpp  ToolEventResult.hpp  ToolKind.hpp  ToolManager.cpp  ToolManager.hpp  ToolPointerEvent.hpp  ToolPreview.hpp
ui/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  CanvasCursorOverlay.cpp  CanvasCursorOverlay.hpp  CanvasOverlayWidget.cpp  CanvasOverlayWidget.hpp  CmdLine.cpp  CmdLine.hpp  DrawMenu.cpp  DrawMenu.hpp  DrawToolBar.cpp  DrawToolBar.hpp  QuickToolBar.cpp  QuickToolBar.hpp  Window.cpp  Window.hpp
